crates/specforge-cli/tests/snapshots/tests__parity__remove_installed__mcp.snap
---
source: crates/specforge-cli/tests/parity.rs
expression: mcp_snap
---
{
  "check": {
    "diagnostics": [],
    "ok": true
  },
  "config": {
    "extensions": [
      "@specforge/software"
    ],
    "name": "demo",
    "registries": [
      {
        "alias": "offline",
        "default_registry": true,
        "url": "http://127.0.0.1:9/v1"
      }
    ],
    "spec_root": "spec",
    "version": "0.1.0"
  },
  "files": {
    "spec/main.spec": "behavior alpha \"Alpha\" {\n  category \"core\"\n  contract \"The system MUST work\"\n}\n",
    "specforge.lock": "{\n  \"lockfile_version\": 1,\n  \"entries\": []\n}"
  },
  "ok": true,
  "payload": {
    "orphan_warnings": [],
    "removed_extension": "@sdk/greet",
    "success": true,
    "version": "0.1.0"
  }
}
